// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Title Initial Props 1`] = `
.c0 {
  color: red;
}

<h1
  className="c0"
>
  Hello World
</h1>
`;

exports[`Storyshots Title With Text 1`] = `
.c0 {
  color: blue;
}

<h1
  className="c0"
>
  Hello World
</h1>
`;
